<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingTop="12dp"
    android:paddingHorizontal="16dp"
    android:paddingBottom="24dp">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:src="@drawable/ic_tab"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_exit_the_app"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#8C8C8C"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:text="@string/exit"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/bg_btn_disable"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:background="@drawable/bg_btn_app_color"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>