<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="110dp">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="140dp"
        android:src="@drawable/img_welcome_back"
        android:layout_marginBottom="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="28sp"
        android:textColor="@color/app_color"
        android:fontFamily="@font/poppins_semibold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_for_choosing_us"
        android:textSize="14sp"
        android:textColor="#6B7280"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:background="@drawable/bg_btn_app_gradient"
        android:paddingHorizontal="48dp"
        android:text="@string/tv_continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold" />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <FrameLayout
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bannerSetting"
        android:visibility="gone"/>
</LinearLayout>