<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="12dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="26dp" />
    <LinearLayout
        android:id="@+id/llLanguage"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_item_language"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="12dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_language_setting"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Language"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="12dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_right_gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_item_language"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="12dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_share_setting"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="12dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_right_gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_item_language"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="12dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_rate_setting"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="12dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_right_gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPolicy"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_item_language"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="12dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_policy_setting"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="12dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_right_gray"/>
    </LinearLayout>
</LinearLayout>