<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="18dp">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/why_did_you_uninstall_the_app"
                android:layout_marginStart="16dp"
                android:textColor="@color/color_700"
                android:textSize="24sp"
                android:fontFamily="@font/gilroy_semibold"
                android:layout_marginEnd="85dp"
                android:layout_marginBottom="18dp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_answer"
                android:layout_marginHorizontal="16dp"
                tools:itemCount="5"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <EditText
                android:id="@+id/ed_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="130dp"
                android:background="@drawable/bg_item_language"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/please_enter_the_reason_why_you_uninstall_the_app_here"
                android:textColorHint="#6B7280"
                android:textColor="@color/color_700"
                android:padding="16dp"
                android:gravity="start"
                android:visibility="gone"
                android:maxLength="30"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_uninstall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/uninstall"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/color_500"
        android:background="@drawable/bg_transparent"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_bold"
        android:layout_gravity="center_vertical"
        android:paddingHorizontal="22dp"
        android:gravity="center"
        android:ellipsize="end"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/cancel"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_app_gradient"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_bold"
        android:layout_gravity="center_vertical"
        android:paddingHorizontal="22dp"
        android:gravity="center"
        android:ellipsize="end"
        android:layout_marginBottom="16dp"
        />
</LinearLayout>