<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_top"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/poppins_semibold"
            android:lines="1"
            android:text="@string/Language"
            android:textSize="20sp"
            android:textColor="@color/color_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_select_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/please_select_language_to_continue"
            android:textColor="@color/color_700"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/cv_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_language" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_save"
            android:layout_width="wrap_content"
            android:minWidth="70dp"
            android:maxWidth="120dp"
            android:layout_height="32dp"
            app:cardBackgroundColor="@color/color_300"
            app:cardCornerRadius="18dp"
            app:cardElevation="0dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:ellipsize="end"/>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="8dp"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_language" />

    <FrameLayout
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bannerSetting"
        android:visibility="gone"/>
</LinearLayout>