<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_top"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:lines="1"
                android:text="@string/Language"
                android:textSize="20sp"
                android:textColor="@color/color_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_select_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/please_select_language_to_continue"
                android:textColor="@color/color_700"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_language" />

            <ImageView
                android:id="@+id/ivDone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_check_language"
                android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0"
            android:layout_marginBottom="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:paddingHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_language_new" />

        <FrameLayout
            android:id="@+id/fr_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bannerSetting"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_apply_language"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_title_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/applying_your_language_settings"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="152dp"
                android:layout_height="152dp"
                android:src="@drawable/img_success_language"/>

            <TextView
                android:id="@+id/tv_content_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/we_re_setting_up_your_language_preferences"
                android:layout_marginHorizontal="56dp"
                android:textColor="#1F1F1F"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>